--- a/style.css
+++ b/style.css
@@ -1,23 +1,29 @@
 
 
-.col-
+.col-1
 {
   border: 1px solid white;
+  padding-bottom: 8%;
+  
+
 }
+
+
 
 .bg-black
 {
   background-color: black;
-  height: 70px;
+  
  
 }
 .bg-yellows
 {
   background-color: gold;
-  height: 70px;
+  
 }
 .bg-orange
 {
   background-color: orange;
-  height: 70px;
+ 
 }
+
